--- a/.github/workflows/master_task-3-group14.yml
+++ b/.github/workflows/master_task-3-group14.yml
@@ -1,12 +1,12 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy dotnet core app to Azure Function App - task-3-group14
+name: Build and deploy dotnet core app to Azure Function App - aaatestwlad
 
 on:
   push:
     branches:
-      - master
+      - dev
   workflow_dispatch:
 
 env:
@@ -20,6 +20,11 @@ jobs:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v2
 
+      - name: 'Azure Login' 
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Setup DotNet ${{ env.DOTNET_VERSION }} Environment
         uses: actions/setup-dotnet@v1
         with:
@@ -31,12 +36,11 @@ jobs:
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           dotnet build --configuration Release --output ./output
           popd
-
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
         with:
-          app-name: 'task-3-group14'
+          app-name: 'aaatestwlad'
           slot-name: 'Production'
           package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_45673097F55F491F9A5D2CA79CE572EB }}
+          publish-profile: ${{ secrets.AZUREPROFILE }}
